--- a/app/manifest.json
+++ b/app/manifest.json
@@ -17,7 +17,7 @@
             "19": "images/icon-19.png",
             "38": "images/icon-38.png"
         },
-        "default_title": "Chrome Extension",
+        "default_title": "CyberWatch",
         "default_popup": "popup.html"
     },
     "externally_connectable": {
